--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <dic class="myComputerContent">
                         <div class="photo_name">
                             <div class="photo">
-                                <center><img src="assits/IMG_5852.jpg" alt=""></center>
+                                <center><img src="assits/NzingaAvatar.jpg" alt=""></center>
                             </div>
                             <div class="name">
 
