--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <dic class="myComputerContent">
                         <div class="photo_name">
                             <div class="photo">
-                                <center><img src="assits/NzingaAvatar.jpg" alt="digital drawing of Nzinga"></center>
+                                <center><img src="https://scontent-iad3-2.xx.fbcdn.net/v/t31.18172-8/16179578_10211735861132447_8010510041110707610_o.jpg?_nc_cat=102&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=VVYlBTRpuYkAX-c-GqC&_nc_ht=scontent-iad3-2.xx&oh=00_AfCuLLaR6btUKX7xdcDjQ9qc1Zr70aD1EvZQl2hVCBQFsg&oe=63C328F4" alt="digital drawing of Nzinga"></center>
                             </div>
                             <div class="name">
 
