--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <dic class="myComputerContent">
                         <div class="photo_name">
                             <div class="photo">
-                                <center><img src="https://scontent-iad3-2.xx.fbcdn.net/v/t31.18172-8/16179578_10211735861132447_8010510041110707610_o.jpg?_nc_cat=102&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=VVYlBTRpuYkAX-c-GqC&_nc_ht=scontent-iad3-2.xx&oh=00_AfCuLLaR6btUKX7xdcDjQ9qc1Zr70aD1EvZQl2hVCBQFsg&oe=63C328F4" alt="digital drawing of Nzinga"></center>
+                                <center><img src="https://scontent-iad3-2.xx.fbcdn.net/v/t39.30808-6/319222234_1327757314642773_3812295091441601915_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=H-eifVGANSMAX_5FMP3&tn=bG2IGWVby5rGlXh0&_nc_ht=scontent-iad3-2.xx&oh=00_AfDrTPCrWm1guWF9kjAisuwUfpx1hfgVivvqG1HVp9p8kg&oe=63A18D6E" alt="digital drawing of Nzinga"></center>
                             </div>
                             <div class="name">
 
